# CT-Watcher

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/AUDIO/: bsp_Audio.c  bsp_Audio.h
main/Hardware/DHT11/: DHT11.c  DHT11.h
main/Hardware/HumanIR/: bsp_HumanIR.c  bsp_HumanIR.h
main/Hardware/Key/: key.c  key.h
main/Hardware/Led/: led.c  led.h
main/Hardware/OLED/: bmp.h  bsp_oled.c  bsp_oled.h  oled.c  oled.h  oledfont.h
main/Hardware/STA/: Wifi_STA.c  Wifi_STA.h
main/MQTT/: Mqtt.c  Mqtt.h
main/NETWORK/MQTT/: mqtt.c  mqtt.h
main/NETWORK/PROV/: ble_prov.c  ble_prov.h
main/NETWORK/STA/: wifi_sta.c  wifi_sta.h
main/NETWORK/WebConfig/: index.html  web_config.c  web_config.h
